--- a/blog/jan_23_2018.md
+++ b/blog/jan_23_2018.md
@@ -1,9 +1,15 @@
 ## I was trying to play subversively the game, but the game played me:
 ### Playing Proteus aesthetically  
 
+<iframe width="420" height="315"
+src="https://www.youtube.com/watch?v=qUNpqkn4WE4">
+</iframe>
+
 As I start the game, I notice that one of the few interactive things in the game are the animals. I decide to collect the animals that I can influence by my presence (not the owl then) and put them on the top of a mountain, trying to see how many I could collect. I encounter some frogs and two group of birds. During the play, this mountain and my attachent to it via the animals create meaning in the way, because I navigate the map always orienting or trying to orient myself so that I can find my way back to the mountain and bring more animal on top of the mountain.  
 
 Night falls, and the clouds are low. As I walk, the bells and clicking of chicken nearby, I follow them, try to circle around the to bring them in the right direction. But the clouds are too low, the fog has risen, and I am lost. I cannot find my way, the chickens almost fall in the ocean.I end up losing my chickens as well, in the mist. I find the house that stands at the bottom of my mountain, past the graveyard. The mountain and the chicken that I thought were mine were easy to lose and so was I. It is hard to make meaning of an environment when your reference points are lost.  
+
+![fog sea and mountain](../assets/blog/jan_23_2018/ss1.png)  
 
 I must have not followed the right path, and I get lost again. I try to get on a mountain, up high, to see further. I see pigeon - is this my mountain? I want to go grab a frog down from the mountain, but I only manage to push the pigeons further. When I bring the frog, it jumps on the pigeons, making them flee far. The mountain top is too small for them to cohabitate. I cannot collect them there, I end up realizing. Maybe I can find another place to go. Meanwhile, I see in the distance a spiral of light. I go towards it, and then in its center. Many days seem to happen at once, now, the seasons have changed? Maybe I can find more animal to collect.  
 
@@ -11,6 +17,12 @@ Arguably, most of the goals you can achieve in Proteus are aesthetic because the
 
 I wanted to have all the animals at the same place because when you approach them and make them move, they make these musical notes, and I wanted to trigger the musical notes of many animals at once, making a kind of music. The animals repeal each other, so the game wouldn’t let me pile them up nicely so that I could push them at the same time.   
 
+![harsh winter](../assets/blog/jan_23_2018/ss2.png) 
+
 Having only heard of Proteus without having played it before, I didn’t know about the changing of season and their different properties. When I started recording, I quickly trigger by accident the spiral that changes the season to fall. There are no animals for me to collect in the fall; the video is in a sense a memorabilia of my experience as I encounter and make sense of the limits and experiences allowed in the game in real time. How I realize that the game is playing me and my expectations as I try to control it and make it into what I want and cannot achieve. Having known that, I would have recorded earlier, but having known that, it wouldn’t have made for so pure a realization.  
 
 How much agency do I really have? Proteus is a powerful game. Even when you think you outwit it, aiming for the mountains, it finds a way to subvert your sense of orientation with the clouds and the fogs. It removes your animals you collect. It changes season through sudden animation. You learn as you make not mistake but steps, realizing that even if you will to go somewhere, the game decides what happens when you and other things move. You are the game’s toy.  
+
+
+
+
