--- a/blog/jan_23_2018.md
+++ b/blog/jan_23_2018.md
@@ -1,7 +1,7 @@
 ## I was trying to play subversively the game, but the game played me
 ### Playing Proteus aesthetically  
 
-<iframe width="420" height="315" src="https://www.youtube.com/embed/qUNpqkn4WE4"> </iframe>
+<iframe src="https://www.youtube.com/embed/qUNpqkn4WE4"> </iframe>
 
 As I start the game, I notice that one of the few interactive things in the game are the animals. I decide to collect the animals that I can influence by my presence (not the owl then) and put them on the top of a mountain, trying to see how many I could collect. I encounter some frogs and two group of birds. During the play, this mountain and my attachent to it via the animals create meaning in the way, because I navigate the map always orienting or trying to orient myself so that I can find my way back to the mountain and bring more animal on top of the mountain.  
 
