--- a/blog/jan_23_2018.md
+++ b/blog/jan_23_2018.md
@@ -1,4 +1,4 @@
-## I was trying to play subversively the game, but the game played me
+I was trying to play subversively the game, but the game played me
 ### Playing Proteus aesthetically  
 
 <iframe width="500" height="375"  frameborder="0" src="https://www.youtube.com/embed/qUNpqkn4WE4"> </iframe>
