--- a/_research/2017-03-06-vr_films.md
+++ b/_research/2017-03-06-vr_films.md
@@ -1,3 +1,9 @@
+---
+title: VR Research: A timeline of vr film and tv representation
+author: Metanymie
+layout: post
+---
+
 # The Rise and Demise of Virtual Reality
 
 *[Critical Commons Manager](http://www.criticalcommons.org/Members/JLipshin/clips/avatar-and-the-internet-as-a-neural-network) about Avatar (2009).* 
