--- a/_research/2017-03-12-vr_biblio.md
+++ b/_research/2017-03-12-vr_biblio.md
@@ -1,9 +1,7 @@
 ---
-title: VR Research
-subtitle: Biblio, concepts, 
+title: VR Research: concepts and lectures
+author: Metanymie
 layout: post
-icon: fa-book
-order: 3
 ---
 
 ## Concept Bank
