--- a/_posts/2017-03-06-vr_films.md
+++ b/_posts/2017-03-06-vr_films.md
@@ -2,6 +2,7 @@
 title: VR Research: A timeline of vr film and tv representation
 author: Metanymie
 layout: post
+category: research
 ---
 
 # The Rise and Demise of Virtual Reality
